fixed word overflow

--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,18 @@ video {
     margin-bottom: 0 !important;
 }
 
+@media (max-width: 767px) {
+    .jumbotron h1 {
+        font-size: 32px;
+    }
+}
+
+@media (max-width: 767px) {
+    .jumbotron h4 {
+        font-size: 20px;
+    }
+}
+
 .about-body {
     /* color: #d5001f; */
     width: 80%;
@@ -123,12 +135,6 @@ video {
     margin-left: auto;
     margin-right: auto;
     padding-top: 50px;
-}
-
-.disclaimer {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .about-fact {
